--- a/_includes/social.html
+++ b/_includes/social.html
@@ -42,13 +42,13 @@
   {% endif %}
 
   <!-- RSS -->
-  <li class="navigation__item">
+ <!--  <li class="navigation__item">
     <a href="/feed.xml" rel="author" title="RSS" target="_blank">
       <i class='social fa fa-rss'></i>
       <span class="label">RSS</span>
     </a>
   </li>
-
+ -->
   {% if site.social.mail %}
   <!-- Email -->
   <li class="navigation__item">
